--- a/index.html
+++ b/index.html
@@ -120,11 +120,8 @@
          var leftMove= target.position().left - dragger.data('position').left + (target.outerWidth(true) - dragger.outerWidth(true)) / 2;
          dragger.animate({top:topMove,left:leftMove},{duration:600,easing:'easeOutBack'});
       }
-      $('.spaces').find('div').droppable({
-         drop:function(event, ui){
-             snapToMiddle(ui.draggable,$(this));
-         }
-     });
+
+     $("input").draggable({ cancel: null });
 
 		</script>
 	</head>
@@ -227,7 +224,7 @@
          </div>
           <div class="square">
 		      <input value="郭佬"></input>
-		      <input type="tel" value="80"></input>
+		      <input type="tel" value="70"></input>
 		    </div>
 	</body>
 </html>
