--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="https://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css" />
-      <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
-      <script src="http://code.jquery.com/ui/1.8.17/jquery-ui.min.js"></script>
+		<script type="text/javascript" src="https://code.jquery.com/jquery.min.js"></script>
+		<script type="text/javascript" src="https://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
 	
 		<!-- CSS -->
@@ -114,10 +114,6 @@
          });
 		});
 
-      $('input').bind('click.sortable mousedown.sortable',function(ev){
-        ev.target.focus();
-      });
-
 		</script>
 	</head>
 	<body>
@@ -217,5 +213,9 @@
 		      <input style="width: 70px; margin-top: 5px;" type="tel" value="80"></input>
 		    </div>
          </div>
+          <div class="square">
+		      <input value="郭佬"></input>
+		      <input type="tel" value="80"></input>
+		    </div>
 	</body>
 </html>
