--- a/index.html
+++ b/index.html
@@ -31,24 +31,24 @@
 		    background-color: lightgray;
 		}
       .blank {
-          width: 80px;
+          width: 30px;
 		    height: 80px;
 		    line-height: 80px;
 		    border: 1px white;
 		    margin-bottom: 50px;
-		    margin-left: 50px;
+		    margin-left: 5px;
 		    text-align: center;
 		    float: left;
 		    color: white;
 		    background-color: white;
 		}
       .blank_small {
-		    width: 80px;
+		    width: 20px;
 		    height: 20px;
 		    line-height: 80px;
 		    border: 1px white;
 		    margin-bottom: 20px;
-		    margin-left: 83px;
+		    margin-left: 49px;
 		    text-align: center;
 		    float: left;
 		    color: white;
@@ -108,8 +108,10 @@
 
                   /* Display the results: */
                   var result = [];
+                  var pos;
                   $.each(snappedTo, function(idx, item) {
                      result.push($(item).text());
+                     pos = $(item).offset();
                   });
                   console.log("current_number: " + $(this).data("current_number"));
                   if(result.length == 0){
@@ -134,6 +136,9 @@
                               console.log("occupied[" + occupied[result[0]] + "] = " + occupied[result[0]]);
                               document.getElementById("leftWeight").value = parseFloat(document.getElementById("leftWeight").value) + parseFloat($(this).find("input")[1].value);
                               $(this).data("current_number", result[0]);
+                              $(this).offset({'top' : pos.top});
+                              $(this).offset({'left' : pos.left});
+                              console.log(pos)
                            }
                         }
                         if(result[0] == "2" || result[0] == "4" || result[0] == "6" || result[0] == "8" || result[0] == "10" || result[0] == "12") {
@@ -143,6 +148,8 @@
                               document.getElementById("rightWeight").value = parseFloat(document.getElementById("rightWeight").value) + parseFloat($(this).find("input")[1].value);
                               occupied[result[0]] = 1;
                               $(this).data("current_number", result[0]);
+                              $(this).offset({'top' : pos.top});
+                              $(this).offset({'left' : pos.left});
                            }
                         }
                      }else if((result[0] == "2" || result[0] == "4" || result[0] == "6" || result[0] == "8" || result[0] == "10" || result[0] == "12") && ($(this).data("current_number") == "1" || $(this).data("current_number") == "3" || $(this).data("current_number") == "5" || $(this).data("current_number") == "7" || $(this).data("current_number") == "9" || $(this).data("current_number") == "11")){
@@ -154,6 +161,8 @@
                            document.getElementById("leftWeight").value = parseFloat(document.getElementById("leftWeight").value) - parseFloat($(this).find("input")[1].value);
                            document.getElementById("rightWeight").value = parseFloat(document.getElementById("rightWeight").value) + parseFloat($(this).find("input")[1].value);
                            $(this).data("current_number", result[0]);
+                           $(this).offset({'top' : pos.top});
+                           $(this).offset({'left' : pos.left});
                         }
                      }else if((result[0] == "1" || result[0] == "3" || result[0] == "5" || result[0] == "7" || result[0] == "9" || result[0] == "11") && ($(this).data("current_number") == "2" || $(this).data("current_number") == "4" || $(this).data("current_number") == "6" || $(this).data("current_number") == "8" || $(this).data("current_number") == "10" || $(this).data("current_number") == "12")){
                         console.log("6");
@@ -164,6 +173,28 @@
                            occupied[result[0]] = 1;
                            occupied[parseInt($(this).data("current_number"))] = 0;
                            $(this).data("current_number", result[0]);
+                           $(this).offset({'top' : pos.top});
+                           $(this).offset({'left' : pos.left});
+                        }
+                     }else if((result[0] == "1" || result[0] == "3" || result[0] == "5" || result[0] == "7" || result[0] == "9" || result[0] == "11") && ($(this).data("current_number") == "1" || $(this).data("current_number") == "3" || $(this).data("current_number") == "5" || $(this).data("current_number") == "7" || $(this).data("current_number") == "9" || $(this).data("current_number") == "11")){
+                        console.log("7");
+                        if(occupied[result[0]] == 0){
+                           $(this).css("background-color", "blue");
+                           occupied[result[0]] = 1;
+                           occupied[parseInt($(this).data("current_number"))] = 0;
+                           $(this).data("current_number", result[0]);
+                           $(this).offset({'top' : pos.top});
+                           $(this).offset({'left' : pos.left});
+                        }
+                     }else if((result[0] == "2" || result[0] == "4" || result[0] == "6" || result[0] == "8" || result[0] == "10" || result[0] == "12") && ($(this).data("current_number") == "2" || $(this).data("current_number") == "4" || $(this).data("current_number") == "6" || $(this).data("current_number") == "8" || $(this).data("current_number") == "10" || $(this).data("current_number") == "12")){
+                        console.log("8");
+                        if(occupied[result[0]] == 0){
+                           $(this).css("background-color", "blue");
+                           occupied[parseInt($(this).data("current_number"))] = 0;
+                           occupied[result[0]] = 1;
+                           $(this).data("current_number", result[0]);
+                           $(this).offset({'top' : pos.top});
+                           $(this).offset({'left' : pos.left});
                         }
                      }
                   }
@@ -196,7 +227,7 @@
 		<div class="spaces" style="float:left;margin-left:50px;">
          <div class="blank_small"></div>
          <input id="leftWeight" readonly="readonly" style="margin-left: 50px; width: 80px" value=0></input>
-         <input id="rightWeight" readonly="readonly" style="margin-left: 339px; width: 80px" value=0></input>
+         <input id="rightWeight" readonly="readonly" style="margin-left: 148px; width: 80px" value=0></input>
          
          <div style="clear:both"></div>
          <div class="square">
